<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titulo"
                android:textStyle="bold"
                android:id="@+id/textView_titulo" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/toggle_reserva_mesa"
                android:textOn="@string/toggle_solicita_delivery"
                android:id="@+id/toggleButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/titulo_selec_horario"
                android:id="@+id/textView_selec_horario" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_horario" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/titulo_notificar_reserva"
                    android:textStyle="bold"
                    android:id="@+id/textView" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_notificar_reserva" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:lines="8"
                android:scrollbars = "vertical"
                android:text="@string/datos_pedido"
                android:id="@+id/textView_lista_pedidos" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/rdb_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdb_plato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdb_plato"/>
                    <RadioButton
                        android:id="@+id/rdb_postre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdb_postre"/>
                    <RadioButton
                        android:id="@+id/rdb_bebida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdb_bebida"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_agregar"
                    android:id="@+id/button_agregar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_confirmar"
                    android:id="@+id/button_confirmar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_reiniciar"
                    android:id="@+id/button_reiniciar" />

            </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:id="@+id/listView_lista" />

        </LinearLayout>


</ScrollView>


    <!--




    -->


</RelativeLayout>
